# C_OpenGL_Project

./: .gitignore  .gitmodules  CMakeLists.txt
Resources/Models/: 1.mtl  Lampa234.mtl
Resources/Shaders/: default_fragment_shader.txt  default_vertex_shader.txt
src/: camera.h  input_keys.h  main.c
src/data_structures/array/: array.c  array.h
src/data_structures/dynamic_array/: _dynamic_array.c  _dynamic_array.h  dynamic_array.c  dynamic_array.h  dynamic_array_float.c  dynamic_array_float.h  dynamic_array_int.c  dynamic_array_int.h  dynamic_array_material.c  dynamic_array_material.h  dynamic_array_mesh.c  dynamic_array_mesh.h  dynamic_array_string.c  dynamic_array_string.h
src/data_structures/matrix/: matrix.c
src/data_structures/queue/: queue.c  queue.h
src/event_handling/: event_handler.c  event_handler.h  input_keys.h
src/middleware/algebra/: algebra.c  algebra.h
src/rendering/: Model3D.c  Model3D.h  _drawable_object.h  camera.c  camera.h  drawable_object.c  drawable_object.h  material.c  material.h  mesh.c  mesh.h  shader_program.c  shader_program.h
src/resource_managing/: load_model.c  load_model.h
